--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pagina WEB de uma Cafeteria" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Charles Marques" />
     <title>Coffeeshop</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Fonte Inter 400,500 and 900 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter,wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fonte Noto Serif Italic 400 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body></body>
 </html>
