--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     />
   </head>
   <body>
-    <div class="page"></div>
+    <div class="page">
+      <header class="header"></header>
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
