--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
+    <title>Coffeeshop</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coffeeshop</title>
     <meta name="description" content="Pagina WEB de uma Cafeteria" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Charles Marques" />
-    <title>Coffeeshop</title>
+
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
@@ -27,7 +29,10 @@
   <body>
     <div class="page">
       <header class="header"></header>
-      <main class="main"></main>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
