--- a/index.html
+++ b/index.html
@@ -15,20 +15,80 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Fonte Inter 400,500 and 900 -->
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Fonte Inter 400,500 and 900
     <link
       href="https://fonts.googleapis.com/css2?family=Inter,wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Fonte Noto Serif Italic 400 -->
+     Fonte Noto Serif Italic 400
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@400&display=swap"
       rel="stylesheet"
-    />
+    /> -->
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <!-- LOGO -->
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo da Cafeteria Triple Expresso"
+            class="nav__logo"
+          />
+          <!-- NAVEGAÇÃO  -->
+          <ul class="nav__links">
+            <li>
+              <a href="#" class="nav__link">Receitas</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- CONTEUDO HEADER  -->
+        <div class="header__content">
+          <div>
+            <h1 class="header__title">
+              <span class="header__span-accent"> Café especial </span>
+              na biblioteca Triple Peaks
+            </h1>
+
+            <p class="header__description">
+              <span class="header__description-span"
+                >Esta é nossa zona de estudo! Temos aquele cafezinho para
+                energizar</span
+              >você e vibrações aconchegantes para soltar a criatividade.
+            </p>
+          </div>
+          <img
+            src="./images/inside_coffee_shop.png"
+            alt="Ilustração 'Dentro da biblioteca'"
+            class="header__image"
+          />
+        </div>
+        <div class="header__footer">
+          <div class="header__footer-left">
+            <p class="header__paragraph">Horários:</p>
+            <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
+            <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
+          </div>
+          <div class="header__footer-right">
+            <p class="header__paragraph">
+              200 Success Avenue, a cidade de Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
