--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Coffeeshop</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coffeeshop</title>
+
     <meta name="description" content="Pagina WEB de uma Cafeteria" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Charles Marques" />
@@ -45,7 +45,7 @@
           <!-- NAVEGAÇÃO  -->
           <ul class="nav__links">
             <li>
-              <a href="#" class="nav__link">Receitas</a>
+              <a href="#recipes" class="nav__link">Receitas</a>
             </li>
             <li>
               <a href="#" class="nav__link">Reservar uma mesa</a>
@@ -90,7 +90,43 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes"></section>
+        <!-- CONTEUDO RECIPES  -->
+        <section id="recipes" class="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <iframe
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=yyhx5XVi7zaJvNEE"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="recipes__iframe"
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p class="recipes__paragraph">Receita Aeropress</p>
+                <p class="recipes__paragraph">~5 min</p>
+              </div>
+            </div>
+            <div class="recipes__video-item">
+              <iframe
+                src="https://www.youtube.com/embed/st571DYYTR8?si=9FCxbnnXFa_4_vXR"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="recipes__iframe"
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p class="recipes__paragraph">Receita de Prensa Francesa</p>
+                <p class="recipes__paragraph">~15 min</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="reservation"></section>
       </main>
       <footer class="footer"></footer>
