--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!--
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -20,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-
+    -->
     <!-- Fonte Inter 400,500 and 900
     <link
       href="https://fonts.googleapis.com/css2?family=Inter,wght@400;500;700&display=swap"
@@ -128,7 +134,7 @@
         </section>
         <section id="reservation" class="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
-          <form action="" class="reservation__form form__section">
+          <form action="" class="reservation__form form">
             <fieldset class="form__fieldset">
               <label for="nome" class="form__label" required>Nome *</label>
               <input
