--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Charles Marques" />
 
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
+
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -185,7 +185,43 @@
           </form>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__circle"></div>
+        <div class="footer__content">
+          <div>
+            <img
+              src="images/logo_coffeeshop_light.svg"
+              alt="Logotipo da Cafeteria Triple Peaks"
+              class="footer__logo"
+            />
+          </div>
+
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Mídia social</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link"
+                  ><img
+                    src="images/facebook_white.svg"
+                    alt="facebook_white"
+                    class="footer__social-icon"
+                  /><span class="footer__social-text">Facebook</span></a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link"
+                  ><img
+                    src="images/instagram_white.svg"
+                    alt="instagram_white"
+                    class="footer__social-icon"
+                  /><span class="footer__social-text">Instagram</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2024 Charles Marques</p>
+      </footer>
     </div>
   </body>
 </html>
