--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 min="1"
                 max="8"
               />
-              <label for="data" class="form__label" required
+              <label for="date" class="form__label" required
                 >Data e hora *</label
               >
               <input
