--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <meta name="description" content="Pagina WEB de uma Cafeteria" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Charles Marques" />
-
     <link rel="shortcut icon" href="favicon.ico" />
-
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -18,28 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <!--
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    -->
-    <!-- Fonte Inter 400,500 and 900
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter,wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-     Fonte Noto Serif Italic 400
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@400&display=swap"
-      rel="stylesheet"
-    /> -->
   </head>
   <body>
     <div class="page">
+      <!-- HEADER -->
       <header class="header">
         <nav class="nav">
           <!-- LOGO -->
@@ -62,7 +42,6 @@
           </ul>
         </nav>
         <!-- CONTEUDO HEADER  -->
-
         <h1 class="header__title">
           <span class="header__span-accent"> Café especial </span>
           na biblioteca Triple Peaks
@@ -134,7 +113,7 @@
         </section>
         <section id="reservation" class="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
-          <form action="" class="reservation__form form">
+          <form action="#" class="reservation__form form">
             <fieldset class="form__fieldset">
               <label for="nome" class="form__label" required>Nome *</label>
               <input
