--- a/index.html
+++ b/index.html
@@ -115,14 +115,15 @@
           <h2 class="reservation__title">Reservar uma mesa</h2>
           <form action="#" class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="nome" class="form__label" required>Nome *</label>
+              <label for="nome" class="form__label">Nome *</label>
               <input
                 type="text"
                 id="nome"
                 placeholder="Nome"
                 class="form__input"
+                required
               />
-              <label for="convidados" class="form__label" required
+              <label for="convidados" class="form__label"
                 >Número de convidados *</label
               >
               <input
@@ -132,24 +133,23 @@
                 class="form__input"
                 min="1"
                 max="8"
+                required
               />
-              <label for="date" class="form__label" required
-                >Data e hora *</label
-              >
+              <label for="date" class="form__label">Data e hora *</label>
               <input
                 type="datetime-local"
                 id="date"
                 name="date"
                 class="form__input"
+                required
               />
-              <label for="email" class="form__label" required
-                >Seu e-mail *</label
-              >
+              <label for="email" class="form__label">Seu e-mail *</label>
               <input
                 type="email"
                 id="email"
                 placeholder="email@email.com"
                 class="form__input"
+                required
               />
               <div class="form__buttons">
                 <button type="submit" class="form__button-submit">
